--- a/public/404.html
+++ b/public/404.html
@@ -6,17 +6,21 @@
     <title>Page Not Found</title>
 
     <style media="screen">
-      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
-      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px 16px; border-radius: 3px; }
-      #message h3 { color: #888; font-weight: normal; font-size: 16px; margin: 16px 0 12px; }
-      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
-      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
-      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
-      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
-      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
-      #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
+      body { padding: 0; margin: 0; font-family: Roboto, Helvetica, Arial, sans-serif; color: rgba(0, 0, 0, 0.87); background: #eceff1; }
+      #message { max-width: 360px; padding: 32px 24px 16px; margin: 100px auto 16px; background: white; border-radius: 3px; }
+      #message h3 { margin: 16px 0 12px; font-size: 16px; font-weight: normal; color: #888; }
+      #message h2 { margin: 0 0 8px; font-size: 16px; font-weight: bold; color: #ffa100; }
+      #message h1 { margin: 0 0 16px; font-size: 22px; font-weight: 300; color: rgba(0, 0, 0, 0.6); }
+      #message p { margin: 16px 0 24px; font-size: 14px; line-height: 140%; }
+      #message a { display: block; padding: 16px; color: white; text-align: center; text-decoration: none; text-transform: uppercase; background: #039be5; border-radius: 4px; }
+
+      #message,
+      #message a { box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24); }
+      #load { font-size: 13px; color: rgba(0, 0, 0, 0.4); text-align: center; }
+
       @media (max-width: 600px) {
-        body, #message { margin-top: 0; background: white; box-shadow: none; }
+        body,
+        #message { margin-top: 0; background: white; box-shadow: none; }
         body { border-top: 16px solid #ffa100; }
       }
     </style>
